# moos-ivp-harmony

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  InitVehicleConfig.txt  MissionArea.py  README.md  SurveyArea.py  UxV.py  build.sh  cdm.py  clean.sh  default.bhv  gridArrayGenerator.py  gridGraph.py  gridVisualizer.py  main.py  main.sh  main_old.py  mission_3.py  shoreside.moos  test.py  variables.txt
.github/workflows/: build_extend.yml
missions/alpha_bravo/: alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  inject_survey.sh  launch_harmony.sh  readme.txt  shoreside.moos
missions/mission_generation/: GenerateMission.sh  IdenticalConfig.txt  InitVehicleConfig.txt  README.md  build_launch_harmony.sh  default.bhv  demo_launch.sh  inject_survey.sh  launch.sh  launch_harmony.sh  shoreside.moos  shoreside.moos++  south_Watuppa.info  south_Watuppa.tif  uav.bhv  uav.moos  uav_3.bhv  uav_3.moos  uav_4.bhv  uav_4.moos  uav_4.moos++  uav_5.bhv  uav_5.moos  uav_5.moos++  uav_6.bhv  uav_6.moos  uav_6.moos++  vehicle.moos  vehicle_1.bhv  vehicle_1.moos  vehicle_1.moos++  vehicle_2.bhv  vehicle_2.moos  vehicle_2.moos++  vehicle_3.bhv  vehicle_3.moos  vehicle_3.moos++
missions/s1_alpha/: InitVehicleConfig.txt  MakeVehicle.sh  bravo.bhv  bravo.moos  clean.sh  default.bhv  inject_survey.sh  launch.sh  shoreside.moos  vehicle.moos  vehicle_0.moos  vehicle_1.moos  vehicle_2.moos
missions/test/: launch.sh  (+7 more)
scripts/: README
src/: CMakeLists.txt
src/pReturnSignal/: CMakeLists.txt  ReturnSignal.cpp  ReturnSignal.h  ReturnSignal.moos  ReturnSignal_Info.cpp  ReturnSignal_Info.h  main.cpp
(+75 files in other folders)
